--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@emotion/core": "^10.0.7",
     "gatsby": "^2.1.11",
     "gatsby-plugin-emotion": "^4.0.4",
+    "gatsby-plugin-manifest": "^2.0.19",
+    "gatsby-plugin-offline": "^2.0.24",
+    "gatsby-plugin-react-helmet": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-source-filesystem": "^2.0.22",
     "gatsby-transformer-remark": "^2.2.6",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-helmet": "^5.2.0",
     "react-typography": "^0.16.18",
     "typography": "^0.16.18",
     "typography-theme-kirkham": "^0.16.18"
